Update Header name

--- a/index.htm
+++ b/index.htm
@@ -17,7 +17,7 @@ img.prof {
 </style>
 <body>
 <div class="header">
-<h1>Cheryl Repal</h1>
+<h1>Cheryl Moncada Repal</h1>
 </div>
 
 <div class="topnav">
