--- a/index.htm
+++ b/index.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>CHERYL'S PROPOSE WEBSITE</title>
+<title>CHERYL'S WEBSITE</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="style.css">
@@ -17,7 +17,7 @@ img.prof {
 </style>
 <body>
 <div class="header">
-<h1>Cheryl Moncada Repal</h1>
+<h1>Cheryl Repal</h1>
 </div>
 
 <div class="topnav">
