--- a/adobe.htm
+++ b/adobe.htm
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>CHERYL'S PROPOSE WEBSITE</title>
+<title>CHERYL REPAL</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="../style.css">
+<link rel="stylesheet" href="style.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
@@ -15,9 +15,9 @@
 
 <div class="topnav">
 <ul>
-	<li><a href="../about.htm">About Me</a></li>
-	<li><a href="../contact.htm">Contacts</a></li>
-	<li><a class="active" href="../graphics.htm"> Graphics </a>
+	<li><a href="about.htm">About Me</a></li>
+	<li><a href="contact.htm">Contacts</a></li>
+	<li><a class="active" href="graphics.htm"> Graphics </a>
 		 <ul class="dropdown">
 			<li><a href="adobe.htm">Photoshop Graphics</a></li>
 			<li><a href="power.htm">Powerpoint Graphics</a></li>
@@ -25,7 +25,7 @@
 			<li><a href="crello.htm">Crello Graphics</a></li> 
         		</ul>
 	</li>
-	<li><a href="../home.htm"> Home </a></li>
+	<li><a href="index.htm"> Home </a></li>
 </ul>
 </div>
 
@@ -34,8 +34,8 @@
 
  <div class="responsive">
   <div class="gallery">
-    <a href="adobe/Photo Manipulation (1).jpg">
-      <img src="adobe/Photo Manipulation (1).jpg" alt="Enchanted Forest with fairy and pixies">
+    <a href="Photo Manipulation (1).jpg">
+      <img src="Photo Manipulation (1).jpg" alt="Enchanted Forest with fairy and pixies">
     </a>
    <div class="desc">Photo Manipulation</div>
  </div>
@@ -43,8 +43,8 @@
 
 <div class="responsive">
   <div class="gallery">
-    <a href="adobe/Photo Manipulation (2).jpg">
-      <img src="adobe/Photo Manipulation (2).jpg" alt="Fishes inside a Bulb with reflection Photo Manipulation">
+    <a href="Photo Manipulation (2).jpg">
+      <img src="Photo Manipulation (2).jpg" alt="Fishes inside a Bulb with reflection Photo Manipulation">
     </a>
    <div class="desc">Photo Manipulation</div>
  </div>
@@ -52,8 +52,8 @@
 
 <div class="responsive">
   <div class="gallery">
-    <a href="adobe/Photo Manipulation (3).jpg">
-      <img src="adobe/Photo Manipulation (3).jpg" alt="Fishes inside a Bulb Photo Manipulation">
+    <a href="Photo Manipulation (3).jpg">
+      <img src="Photo Manipulation (3).jpg" alt="Fishes inside a Bulb Photo Manipulation">
     </a>
    <div class="desc">Photo Manipulation</div>
  </div>
@@ -61,8 +61,8 @@
 
 <div class="responsive">
   <div class="gallery">
-    <a href="adobe/Photo Manipulation (4).jpg">
-      <img src="adobe/Photo Manipulation (4).jpg" alt="Boat in a cup Photo Manipulation">
+    <a href="Photo Manipulation (4).jpg">
+      <img src="Photo Manipulation (4).jpg" alt="Boat in a cup Photo Manipulation">
     </a>
    <div class="desc">Photo Manipulation</div>
  </div>
@@ -70,8 +70,8 @@
 
 <div class="responsive">
   <div class="gallery">
-    <a href="adobe/Tarp (1).jpg">
-      <img src="adobe/Tarp (1).jpg" alt="Birthday Tarpaulin with pink background and mickey mouse theme">
+    <a href="Tarp (1).jpg">
+      <img src="Tarp (1).jpg" alt="Birthday Tarpaulin with pink background and mickey mouse theme">
     </a>
    <div class="desc">Tarpaulin Layout</div>
  </div>
@@ -79,8 +79,8 @@
 
 <div class="responsive">
   <div class="gallery">
-    <a href="adobe/Tarp (5).jpg">
-      <img src="adobe/Tarp (5).jpg" alt="Wedding Tarpaulin with sky blue background and a heart frame">
+    <a href="Tarp (5).jpg">
+      <img src="Tarp (5).jpg" alt="Wedding Tarpaulin with sky blue background and a heart frame">
     </a>
    <div class="desc">Tarpaulin Layout</div>
  </div>
@@ -88,8 +88,8 @@
 
 <div class="responsive">
   <div class="gallery">
-    <a href="adobe/Tarp (6).jpg">
-      <img src="adobe/Tarp (6).jpg" alt="Birthday Tarpaulin with pink background and hello kitty theme">
+    <a href="Tarp (6).jpg">
+      <img src="Tarp (6).jpg" alt="Birthday Tarpaulin with pink background and hello kitty theme">
     </a>
    <div class="desc">Tarpaulin Layout</div>
  </div>
@@ -97,8 +97,8 @@
 
 <div class="responsive">
   <div class="gallery">
-    <a href="adobe/Tarp (7).jpg">
-      <img src="adobe/Tarp (7).jpg" alt="Birthday Tarpaulin with blue background and stitch theme">
+    <a href="Tarp (7).jpg">
+      <img src="Tarp (7).jpg" alt="Birthday Tarpaulin with blue background and stitch theme">
     </a>
    <div class="desc">Tarpaulin Layout</div>
  </div>
@@ -106,8 +106,8 @@
 
 <div class="responsive">
   <div class="gallery">
-    <a href="adobe/Tarp (2).jpg">
-      <img src="adobe/Tarp (2).jpg" alt="Trucks no entry advisory">
+    <a href="Tarp (2).jpg">
+      <img src="Tarp (2).jpg" alt="Trucks no entry advisory">
     </a>
    <div class="desc">Tarpaulin Layout</div>
  </div>
@@ -115,8 +115,8 @@
 
 <div class="responsive">
   <div class="gallery">
-    <a href="adobe/Tarp (4).jpg">
-      <img src="adobe/Tarp (4).jpg" alt="Birthday Tarpaulin with violet background and bts theme">
+    <a href="Tarp (4).jpg">
+      <img src="Tarp (4).jpg" alt="Birthday Tarpaulin with violet background and bts theme">
     </a>
    <div class="desc">Tarpaulin Layout</div>
  </div>
@@ -124,8 +124,8 @@
 
 <div class="responsive">
   <div class="gallery">
-    <a href="adobe/Tarp (3).jpg">
-      <img src="adobe/Tarp (3).jpg" alt="Birthday Tarpaulin with blue background and frozen theme">
+    <a href="Tarp (3).jpg">
+      <img src="Tarp (3).jpg" alt="Birthday Tarpaulin with blue background and frozen theme">
     </a>
    <div class="desc">Tarpaulin Layout</div>
  </div>
@@ -133,8 +133,8 @@
 
 <div class="responsive">
   <div class="gallery">
-    <a href="adobe/Tarp.jpg">
-      <img src="adobe/Tarp.jpg" alt="Birthday Tarpaulin with black background and rock band theme">
+    <a href="Tarp.jpg">
+      <img src="Tarp.jpg" alt="Birthday Tarpaulin with black background and rock band theme">
     </a>
    <div class="desc">Tarpaulin Layout</div>
  </div>
@@ -142,8 +142,8 @@
 
 <div class="responsive">
   <div class="gallery">
-    <a href="adobe/Tshirt (1).png">
-      <img src="adobe/Tshirt (1).png" alt="Precious Stone Tshirt">
+    <a href="Tshirt (1).png">
+      <img src="Tshirt (1).png" alt="Precious Stone Tshirt">
     </a>
    <div class="desc">Tshirt Design</div>
  </div>
@@ -151,8 +151,8 @@
 
 <div class="responsive">
   <div class="gallery">
-    <a href="adobe/Tshirt (2).png">
-      <img src="adobe/Tshirt (2).png" alt="Violet Statement Tshirt, the struggle you face today">
+    <a href="Tshirt (2).png">
+      <img src="Tshirt (2).png" alt="Violet Statement Tshirt, the struggle you face today">
     </a>
    <div class="desc">Tshirt Design</div>
  </div>
@@ -160,8 +160,8 @@
 
 <div class="responsive">
   <div class="gallery">
-    <a href="adobe/Tshirt (3).png">
-      <img src="adobe/Tshirt (3).png" alt="Green Statement Tshirt, the purpose of our lives is to be happy">
+    <a href="Tshirt (3).png">
+      <img src="Tshirt (3).png" alt="Green Statement Tshirt, the purpose of our lives is to be happy">
     </a>
    <div class="desc">Tshirt Design</div>
  </div>
@@ -169,8 +169,8 @@
 
 <div class="responsive">
   <div class="gallery">
-    <a href="adobe/Tshirt (4).png">
-      <img src="adobe/Tshirt (4).png" alt="Peach Statement Tshirt, you only live once">
+    <a href="Tshirt (4).png">
+      <img src="Tshirt (4).png" alt="Peach Statement Tshirt, you only live once">
     </a>
    <div class="desc">Tshirt Design</div>
  </div>
@@ -178,8 +178,8 @@
 
 <div class="responsive">
   <div class="gallery">
-    <a href="adobe/ADS (1).jpg">
-      <img src="adobe/ADS (1).jpg" alt="Precious Stone Water Refilling Station Advertisement">
+    <a href="ADS (1).jpg">
+      <img src="ADS (1).jpg" alt="Precious Stone Water Refilling Station Advertisement">
     </a>
    <div class="desc">Advertisement Poster</div>
  </div>
@@ -187,8 +187,8 @@
 
 <div class="responsive">
   <div class="gallery">
-    <a href="adobe/ADS (2).jpg">
-      <img src="adobe/ADS (2).jpg" alt="Marketing Advertisement with balck and red background">
+    <a href="ADS (2).jpg">
+      <img src="ADS (2).jpg" alt="Marketing Advertisement with balck and red background">
     </a>
    <div class="desc">Advertisement Poster</div>
  </div>
@@ -196,8 +196,8 @@
 
 <div class="responsive">
   <div class="gallery">
-    <a href="adobe/pres stone.png">
-      <img src="adobe/pres stone.png" alt="Precious Stone Logo">
+    <a href="pres stone.png">
+      <img src="pres stone.png" alt="Precious Stone Logo">
     </a>
    <div class="desc">Advertisement PosterLogo</div>
  </div>
