--- a/canva.htm
+++ b/canva.htm
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>CHERYL'S PROPOSE WEBSITE</title>
+<title>CHERYL REPAL</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="../style.css">
+<link rel="stylesheet" href="style.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
@@ -15,9 +15,9 @@
 
 <div class="topnav">
 <ul>
-	<li><a href="../about.htm">About Me</a></li>
-	<li><a href="../contact.htm">Contacts</a></li>
-	<li><a class="active" href="../graphics.htm"> Graphics </a>
+	<li><a href="about.htm">About Me</a></li>
+	<li><a href="contact.htm">Contacts</a></li>
+	<li><a class="active" href="graphics.htm"> Graphics </a>
 		<ul class="dropdown">
 			<li><a href="adobe.htm">Photoshop Graphics</a></li>
 			<li><a href="power.htm">Powerpoint Graphics</a></li>
@@ -25,7 +25,7 @@
 			<li><a href="crello.htm">Crello Graphics</a></li> 
 		</ul>
 	</li>
-	<li><a href="../home.htm"> Home </a></li>
+	<li><a href="home.htm"> Home </a></li>
 </ul>
 </div>
 
@@ -35,8 +35,8 @@
 <div>
  <div class="responsive">
   <div class="gallery">
-    <a href="canva/insta (1).jpg">
-      <img src="canva/insta (1).jpg" alt="a picture of a ship passing across the river with quotation about crossing the sea">
+    <a href="insta (1).jpg">
+      <img src="insta (1).jpg" alt="a picture of a ship passing across the river with quotation about crossing the sea">
     </a>
    <div class="desc">Instagram Post</div>
  </div>
@@ -45,8 +45,8 @@
 <div>
  <div class="responsive">
   <div class="gallery">
-    <a href="canva/insta (1).png">
-      <img src="canva/insta (1).png" alt="a picture of a sad girl with quotation about loneliness">
+    <a href="insta (1).png">
+      <img src="insta (1).png" alt="a picture of a sad girl with quotation about loneliness">
     </a>
    <div class="desc">Instagram Post</div>
  </div>
@@ -55,8 +55,8 @@
 <div>
  <div class="responsive">
   <div class="gallery">
-    <a href="canva/insta (2).jpg">
-      <img src="canva/insta (2).jpg" alt="a picture of light silhoutte with quotation about struggle">
+    <a href="insta (2).jpg">
+      <img src="insta (2).jpg" alt="a picture of light silhoutte with quotation about struggle">
     </a>
    <div class="desc">Instagram Post</div>
  </div>
@@ -65,8 +65,8 @@
 <div>
  <div class="responsive">
   <div class="gallery">
-    <a href="canva/insta.png">
-      <img src="canva/insta.png" alt="a picture of light silhoutte with quotation about struggle">
+    <a href="insta.png">
+      <img src="insta.png" alt="a picture of light silhoutte with quotation about struggle">
     </a>
    <div class="desc">Instagram Post</div>
  </div>
@@ -75,8 +75,8 @@
 <div>
  <div class="responsive">
   <div class="gallery">
-    <a href="canva/logo (1).png">
-      <img src="canva/logo (1).png" alt="Cheryl's personal logo">
+    <a href="logo (1).png">
+      <img src="logo (1).png" alt="Cheryl's personal logo">
     </a>
    <div class="desc">Logo Layout</div>
  </div>
@@ -85,8 +85,8 @@
 <div>
  <div class="responsive">
   <div class="gallery">
-    <a href="canva/logo (2).png">
-      <img src="canva/logo (2).png" alt="ACN Store logo">
+    <a href="logo (2).png">
+      <img src="logo (2).png" alt="ACN Store logo">
     </a>
    <div class="desc">Logo Layout</div>
  </div>
@@ -95,8 +95,8 @@
 <div>
  <div class="responsive">
   <div class="gallery">
-    <a href="canva/logo (3).png">
-      <img src="canva/logo (3).png" alt="C.M.R logo">
+    <a href="logo (3).png">
+      <img src="logo (3).png" alt="C.M.R logo">
     </a>
    <div class="desc">Logo Layout</div>
  </div>
@@ -105,8 +105,8 @@
 <div>
  <div class="responsive">
   <div class="gallery">
-    <a href="canva/logo (4).png">
-      <img src="canva/logo (4).png" alt="L&C Bookstore logo">
+    <a href="logo (4).png">
+      <img src="logo (4).png" alt="L&C Bookstore logo">
     </a>
    <div class="desc">Logo Layout</div>
  </div>
@@ -115,8 +115,8 @@
 <div>
  <div class="responsive">
   <div class="gallery">
-    <a href="canva/poster (1).png">
-      <img src="canva/poster (1).png" alt="SB19, the PPOP Kings poster">
+    <a href="poster (1).png">
+      <img src="poster (1).png" alt="SB19, the PPOP Kings poster">
     </a>
    <div class="desc">Poster</div>
  </div>
@@ -125,8 +125,8 @@
 <div>
  <div class="responsive">
   <div class="gallery">
-    <a href="canva/poster (2).png">
-      <img src="canva/poster (2).png" alt="calendar schedule for 2021">
+    <a href="poster (2).png">
+      <img src="poster (2).png" alt="calendar schedule for 2021">
     </a>
    <div class="desc">Poster</div>
  </div>
@@ -135,8 +135,8 @@
 <div>
  <div class="responsive">
   <div class="gallery">
-    <a href="canva/poster (1).jpg">
-      <img src="canva/poster (1).jpg" alt="picture of Valentine day promo package">
+    <a href="poster (1).jpg">
+      <img src="poster (1).jpg" alt="picture of Valentine day promo package">
     </a>
    <div class="desc">Poster</div>
  </div>
@@ -145,8 +145,8 @@
 <div>
  <div class="responsive">
   <div class="gallery">
-    <a href="canva/poster (2).jpg">
-      <img src="canva/poster (2).jpg" alt="picture of baking materials promo package">
+    <a href="poster (2).jpg">
+      <img src="poster (2).jpg" alt="picture of baking materials promo package">
     </a>
    <div class="desc">Poster</div>
  </div>
@@ -155,8 +155,8 @@
 <div>
  <div class="responsive">
   <div class="gallery">
-    <a href="canva/poster (4).png">
-      <img src="canva/poster (4).png" alt="Virtualahan's enroll  now poster">
+    <a href="poster (4).png">
+      <img src="poster (4).png" alt="Virtualahan's enroll  now poster">
     </a>
    <div class="desc">Poster</div>
  </div>
@@ -165,8 +165,8 @@
 <div>
  <div class="responsive">
   <div class="gallery">
-    <a href="canva/poster (3).png">
-      <img src="canva/poster (3).png" alt="picture of a dream catcher with quotation about dreaming for the future">
+    <a href="poster (3).png">
+      <img src="poster (3).png" alt="picture of a dream catcher with quotation about dreaming for the future">
     </a>
    <div class="desc">Poster</div>
  </div>
