--- a/contact.htm
+++ b/contact.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>CHERYL'S PROPOSE WEBSITE</title>
+<title>CHERYL REPAL</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="style.css">
@@ -15,17 +15,17 @@
 
 <div class="topnav">
 <ul>
-	<li><a href="about.htm">About Us</a></li>
+	<li><a href="about.htm">About Me</a></li>
 	<li><a class="active" href="contact.htm">Contacts</a></li>
 	<li><a href="graphics.htm"> Graphics </a>
 		<ul class="dropdown">
-			<li><a href="Graphics Subpage/adobe.htm">Photoshop Graphics</a></li>
-			<li><a href="Graphics Subpage/power.htm">Powerpoint Graphics</a></li>
-			<li><a href="Graphics Subpage/canva.htm">Canva Graphics</a></li>
-			<li><a href="Graphics Subpage/crello.htm">Crello Graphics</a></li> 
+			<li><a href="adobe.htm">Photoshop Graphics</a></li>
+			<li><a href="power.htm">Powerpoint Graphics</a></li>
+			<li><a href="canva.htm">Canva Graphics</a></li>
+			<li><a href="crello.htm">Crello Graphics</a></li> 
 		</ul>
 	</li>
-	<li><a href="home.htm"> Home </a></li>
+	<li><a href="index.htm"> Home </a></li>
 </ul>
 </div>
 
