--- a/crello.htm
+++ b/crello.htm
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>CHERYL'S PROPOSE WEBSITE</title>
+<title>CHERYL REPAL</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="../style.css">
+<link rel="stylesheet" href="style.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
@@ -15,9 +15,9 @@
 
 <div class="topnav">
 <ul>
-	<li><a href="../about.htm">About Us</a></li>
-	<li><a href="../contact.htm">Contacts</a></li>
-	<li><a class="active" href="../graphics.htm"> Graphics </a>
+	<li><a href="about.htm">About Me</a></li>
+	<li><a href="contact.htm">Contacts</a></li>
+	<li><a class="active" href="graphics.htm"> Graphics </a>
 		<ul class="dropdown">
 			<li><a href="adobe.htm">Photoshop Graphics</a></li>
 			<li><a href="power.htm">Powerpoint Graphics</a></li>
@@ -25,7 +25,7 @@
 			<li><a href="crello.htm">Crello Graphics</a></li> 
 		</ul>
 	</li>
-	<li><a href="../home.htm"> Home </a></li>
+	<li><a href="index.htm">Home</a></li>
 </ul>
 </div>
 
@@ -34,8 +34,8 @@
 
 <div class="responsive">
   <div class="gallery">
-    <a href="crello/crello (1).jpeg">
-      <img src="crello/crello (1).jpeg" alt="An image with a purple background and an angel having broken wings, with quotation about spreading wings">
+    <a href="crello (1).jpeg">
+      <img src="crello (1).jpeg" alt="An image with a purple background and an angel having broken wings, with quotation about spreading wings">
      </a>
   <div class="desc">Spread My Wings</div>
 </div>
@@ -43,8 +43,8 @@
 
 <div class="responsive">
   <div class="gallery">
-    <a href="crello/crello (2).jpeg">
-      <img src="crello/crello (2).jpeg" alt="social media cover photo">
+    <a href="crello (2).jpeg">
+      <img src="crello (2).jpeg" alt="social media cover photo">
     </a>
   <div class="desc">I am Cheryl</div>
 </div>
@@ -52,8 +52,8 @@
 
 <div class="responsive">
   <div class="gallery">
-    <a href="crello/crello (1).png">
-      <img src="crello/crello (1).png" alt="clear blue sky with a cherry blossom tree and a quotation about trusting God">
+    <a href="crello (1).png">
+      <img src="crello (1).png" alt="clear blue sky with a cherry blossom tree and a quotation about trusting God">
     </a>
   <div class="desc">Trust the process</div>
 </div>
@@ -61,8 +61,8 @@
 
 <div class="responsive">
   <div class="gallery">
-    <a href="crello/crello (2).png">
-      <img src="crello/crello (2).png" alt="an image of a girl seating on the edge of the bridge, her feet touches the sea with a quotation about loneliness">
+    <a href="crello (2).png">
+      <img src="crello (2).png" alt="an image of a girl seating on the edge of the bridge, her feet touches the sea with a quotation about loneliness">
     </a>
   <div class="desc">I'm scared</div>
 </div>
@@ -70,8 +70,8 @@
 
 <div class="responsive">
   <div class="gallery">
-    <a href="crello/crello (3).jpg">
-      <img src="crello/crello (3).jpg" alt="an image of city with a quotation about peace">
+    <a href="crello (3).jpg">
+      <img src="crello (3).jpg" alt="an image of city with a quotation about peace">
     </a>
   <div class="desc">Crello Find Peace</div>
 </div>
@@ -79,8 +79,8 @@
 
 <div class="responsive">
   <div class="gallery">
-    <a href="crello/crello (4).jpg">
-      <img src="crello/crello (4).jpg" alt="an image of an athlete running in a field with a quotation about running">
+    <a href="crello (4).jpg">
+      <img src="crello (4).jpg" alt="an image of an athlete running in a field with a quotation about running">
     </a>
   <div class="desc">Run with Patience</div>
 </div>
@@ -88,8 +88,8 @@
 
 <div class="responsive">
   <div class="gallery">
-    <a href="crello/crello (5).jpg">
-      <img src="crello/crello (5).jpg" alt="an image of a girl sipping coffee in the morning">
+    <a href="crello (5).jpg">
+      <img src="crello (5).jpg" alt="an image of a girl sipping coffee in the morning">
     </a>
   <div class="desc">Morning Coffee</div>
 </div>
@@ -97,8 +97,8 @@
 
 <div class="responsive">
   <div class="gallery">
-    <a href="crello/crello (6).jpg">
-      <img src="crello/crello (6).jpg" alt="an image of smiling mother and child with flowes on the side as decoration and an abstract pink background">
+    <a href="crello (6).jpg">
+      <img src="crello (6).jpg" alt="an image of smiling mother and child with flowes on the side as decoration and an abstract pink background">
     </a>
   <div class="desc">Mother and child</div>
 </div>
