--- a/graphics.htm
+++ b/graphics.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>CHERYL'S PROPOSE WEBSITE</title>
+<title>CHERYL REPAL</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="style.css">
@@ -15,17 +15,17 @@
 
 <div class="topnav">
 <ul>
-	<li><a href="about.htm">About Us</a></li>
+	<li><a href="about.htm">About Me</a></li>
 	<li><a href="contact.htm">Contacts</a></li>
 	<li><a class="active" href="graphics.htm"> Graphics </a>
  		<ul class="dropdown">
-			<li><a href="Graphics Subpage/adobe.htm">Photoshop Graphics</a></li>
-			<li><a href="Graphics Subpage/power.htm">Powerpoint Graphics</a></li>
-			<li><a href="Graphics Subpage/canva.htm">Canva Graphics</a></li>
-			<li><a href="Graphics Subpage/crello.htm">Crello Graphics</a></li> 
+			<li><a href="adobe.htm">Photoshop Graphics</a></li>
+			<li><a href="power.htm">Powerpoint Graphics</a></li>
+			<li><a href="canva.htm">Canva Graphics</a></li>
+			<li><a href="crello.htm">Crello Graphics</a></li> 
 		</ul>
 	</li>
-	<li><a href="home.htm"> Home </a></li>
+	<li><a href="index.htm"> Home </a></li>
 </ul>
 </div>
 
@@ -35,7 +35,7 @@
 
 <div class="responsive">
   <div class="gallery">
-    <a href="Graphics Subpage/adobe.htm" alt="image going to Photoshop Graphics Subpage">
+    <a href="adobe.htm" alt="image going to Photoshop Graphics Subpage">
       <img src="https://freepngimg.com/download/photoshop_logo/8-2-photoshop-logo-png-hd.png" alt="Advertisement graphics that leads to Graphics Advestisement Subpage">
     </a>
     <div class="desc">Adobe Photoshop</div>
@@ -44,7 +44,7 @@
 
 <div class="responsive">
   <div class="gallery">
-    <a href="Graphics Subpage/power.htm">
+    <a href="power.htm">
        <img src="https://aux2.iconspalace.com/uploads/solid-powerpoint-icon-256.png" alt="going to Power Point Graphics Subpage"/>
    </a>
   <div class="desc">Microsoft Powerpoint</div>
@@ -53,7 +53,7 @@
 
 <div class="responsive">
   <div class="gallery">
-    <a href="Graphics Subpage/canva.htm">
+    <a href="canva.htm">
       <img src="http://assets.stickpng.com/images/5842a622a6515b1e0ad75af9.png" alt="going to Canva Graphics Subpage">
     </a>
   <div class="desc">Canva</div>
@@ -62,7 +62,7 @@
 
 <div class="responsive">
   <div class="gallery">
-    <a href="Graphics Subpage/crello.htm">
+    <a href="crello.htm">
       <img src="https://images.g2crowd.com/uploads/product/image/large_detail/large_detail_32738b1f5664a92625e78dd522d72d78/crello.png" alt="going to Crello Graphics Subpage"">
     </a>
   <div class="desc">Crello Icon</div>
