--- a/power.htm
+++ b/power.htm
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
 <title>Graphics Page</title>
-<link rel="stylesheet" href="../style.css">
+<link rel="stylesheet" href="style.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 </head>
@@ -14,9 +14,9 @@
 
 <div class="topnav">
 <ul>
-	<li><a href="../about.htm">About Me</a></li>
-	<li><a href="../contact.htm">Contacts</a></li>
-	<li><a class="active" href="../graphics.htm"> Graphics </a>
+	<li><a href="about.htm">About Me</a></li>
+	<li><a href="contact.htm">Contacts</a></li>
+	<li><a class="active" href="graphics.htm"> Graphics </a>
 		<ul class="dropdown">
 			<li><a href="adobe.htm">Photoshop Graphics</a></li>
 			<li><a href="power.htm">Powerpoint Graphics</a></li>
@@ -24,7 +24,7 @@
 			<li><a href="crello.htm">Crello Graphics</a></li> 
 		</ul>
 	</li>
-	<li><a href="../home.htm"> Home </a></li>
+	<li><a href="home.htm"> Home </a></li>
 </ul>
 </div>
 
@@ -34,8 +34,8 @@
 
  <div class="responsive">
   <div class="gallery">
-    <a href="power/old1.jpg">
-      <img src="power/old1.jpg" alt="C.Y.O.L.S Camp 2018 Announcement">
+    <a href="old1.jpg">
+      <img src="old1.jpg" alt="C.Y.O.L.S Camp 2018 Announcement">
     </a>
    <div class="desc">Announcement</div>
  </div>
@@ -43,8 +43,8 @@
 
 <div class="responsive">
   <div class="gallery">
-    <a href="power/old2.jpg">
-      <img src="power/old2.jpg" alt="Christmas Worship 2018 Announcement">
+    <a href="old2.jpg">
+      <img src="old2.jpg" alt="Christmas Worship 2018 Announcement">
     </a>
    <div class="desc">Announcement</div>
  </div>
@@ -52,8 +52,8 @@
 
 <div class="responsive">
   <div class="gallery">
-    <a href="power/old3.jpg">
-      <img src="power/old3.jpg" alt="Korean American Mission">
+    <a href="old3.jpg">
+      <img src="old3.jpg" alt="Korean American Mission">
     </a>
    <div class="desc">Announcement</div>
  </div>
@@ -61,8 +61,8 @@
 
 <div class="responsive">
   <div class="gallery">
-    <a href="power/old4.jpg">
-      <img src="power/old4.jpg" alt="General Assembly 2018 Announcement">
+    <a href="old4.jpg">
+      <img src="old4.jpg" alt="General Assembly 2018 Announcement">
     </a>
    <div class="desc">Announcement</div>
  </div>
@@ -70,8 +70,8 @@
 
 <div class="responsive">
   <div class="gallery">
-    <a href="power/old5.jpg">
-      <img src="power/old5.jpg" alt="New Year Worship 2019 Announcement">
+    <a href="old5.jpg">
+      <img src="old5.jpg" alt="New Year Worship 2019 Announcement">
     </a>
    <div class="desc">Announcement</div>
  </div>
@@ -79,8 +79,8 @@
 
 <div class="responsive">
   <div class="gallery">
-    <a href="power/old6.jpg">
-      <img src="power/old6.jpg" alt="Bookkeeping Seminar 2018 Announcement">
+    <a href="old6.jpg">
+      <img src="old6.jpg" alt="Bookkeeping Seminar 2018 Announcement">
     </a>
    <div class="desc">Announcement</div>
  </div>
@@ -88,8 +88,8 @@
 
 <div class="responsive">
   <div class="gallery">
-    <a href="power/old7.jpg">
-      <img src="power/old7.jpg" alt="Bible Verse - John Chapter 8 verse 32">
+    <a href="old7.jpg">
+      <img src="old7.jpg" alt="Bible Verse - John Chapter 8 verse 32">
     </a>
    <div class="desc">Bible Verse</div>
  </div>
