--- a/adobe.htm
+++ b/adobe.htm
@@ -133,8 +133,8 @@
 
 <div class="responsive">
   <div class="gallery">
-    <a href="Tarp.jpg">
-      <img src="Tarp.jpg" alt="Birthday Tarpaulin with black background and rock band theme">
+    <a href="tarp.jpg">
+      <img src="tarp.jpg" alt="Birthday Tarpaulin with black background and rock band theme">
     </a>
    <div class="desc">Tarpaulin Layout</div>
  </div>
