--- a/power.htm
+++ b/power.htm
@@ -2,7 +2,7 @@
 <html>
 <html lang="en">
 <head>
-<title>Graphics Page</title>
+<title>CHERYL REPAL</title>
 <link rel="stylesheet" href="style.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
