--- a/index.htm
+++ b/index.htm
@@ -6,6 +6,13 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="style.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<style>
+img.prof {
+	float: left;
+	border-radius: 25px;
+	border: 3px solid black;
+}
+</style>	
 </head>
 <body>
 <div class="header">
