--- a/index.htm
+++ b/index.htm
@@ -37,9 +37,9 @@ img.prof {
 
 <div class="content">
 <h2>What you are about to see is the life and the work of Cheryl Repal</h2>
-<p> <img class="prof" src="che.jpg" alt="Cheryl Repal's Profile Picture, a graphic designer and a Sunday school teacher" style="width:300px;height:300px;margin-right:20px;">Change is inevitable. It is the only constant thing in this world. <br>And sometimes we resist change because we are afraid of what the result this change will bring to us but, there is nothing we can do to stop it.
+<p> <img class="prof" src="che.jpg" alt="Cheryl Repal's Profile Picture, a graphic designer and a Sunday school teacher" style="width:300px;height:300px;margin-right:20px;">Change is inevitable. It is the only constant thing in this world. And sometimes we resist change because we are afraid of what the result this change will bring to us but, there is nothing we can do to stop it.
 <br><br>
-Being born normal and healthy, it is not easy for me to accept change, especially it has made a big difference in the life I am used to. From a limitless person to a limited one, from 'I can do it alone' to 'can you help me with this.'<br>But because of that, I have learned a lot, I have grown a lot.
+Being born normal and healthy, it is not easy for me to accept change, especially it has made a big difference in the life I am used to. From a limitless person to a limited one, from 'I can do it alone' to 'can you help me with this.' But because of that, I have learned a lot, I have grown a lot.
 <br><br>
 In here you will see my graphic designs portfolio, the ministries I serve, the people who inspire me and help me along the way, the training I attended, wisdom and knowledge I gained through the years, and a short biography of life. You will also see the editing tools I use in editing photos and graphic design.
 <br><br>
