--- a/about.htm
+++ b/about.htm
@@ -31,29 +31,22 @@
 
 <div class="content">
 	<h2>A Short Biography of Who Am I</h2>
-    		<p>Hi! Everyone! My name is Cheryl.<br>I am a graphic designer and a volunteer Sunday school teacher.<br>The third child of Deolita Moncada and Pablito Repal.
-			<br>I was born on December 15, 1981 in Masbate.<br>My mom is a great sewer, and our dad is the best carpenter in town.<br><br>
-			When I was child I dreamt of becoming a civil engineer because of the influence our Papa made in me.<br>
-			I remember when he renovated our house, me and my older sister was his labourers.<br>Through that I've learned and loved carpentry.
-			<br>Also because of that, the belief that 'I can do anything' was formed inside of me.<br>
-			I always thought that if other can do it, I can able to do it too and  do it much better.<br>
-			So I didn't ask for help from anyone regardless of the situation.<br><br>
-			I was 9 years old when I first encountered God.<br>Our Sunday school teacher said God can be our friend.<br>
-			And I want a friend like God, so I asked Him to be my bestfriend.<br><br>
-			October 31, 1999 - I've met an accident. My life drastically change and it make a 180 degree turn.<br>
-			I am caught by surprise and I didn't welcome it with open arm.<br>
-			Because I don't want anyone to feel sorry for me, I wore a mask to hide what's I truly feel inside.<br><br>
-			After 11 months our mom died.<br>She left us, me and my other three younger siblings, to the care of our Ate (older sister) Joy.<br>
-			At a young age, she took the responsibility of raising us, sending us to school, paying bills and taking good care of us.<br>
-			My Ate (older sister) is the first person I admire.<br><br>
-			2003, my Ate Joy approached me and asked me if I wanted to teach children in our Sunday school.<br>
-			But I declined her, because I thought I'm not fit for job.<br>I am not patient with kids. I easily get irritated when someone is so loud.<br>
-			But God called me. And after more than a decade I'm still teaching kids.<br>He fully equipped me to do the job.<br><br>
-			Through the years, God has been graciously showered me with so much blessing<br>He sent a lot  of people to help me along the way.<br>
-			He has shaped me to who I am today and is still shaping me.<br>
-			Now I know that everything happened in my life is God's way of bringing me closer to Him.<br>
-			And there's no other way that I can fully understand His plan for me if I had not gone through all of that.<br>
-			The reason of my existence is God and God alone.
+    		<p>Hi! Everyone! My name is Cheryl. I am a graphic designer and a volunteer Sunday school teacher. The third child of Deolita Moncada and Pablito Repal. I was born on December 15, 1981, in Masbate. My mom is a great sewer, and our dad is the best carpenter in town.
+<br><br>
+When I was a child, I dreamt of becoming a civil engineer because of the influence our Papa made on me. I remember when he renovated our house, I and my older sister was his laborers. Through that, I have learned and loved carpentry. Also because of that, the belief that 'I can do anything' was formed inside of me. I always thought that if others can do it, I can be able to do it too and do it much better. So, I did not ask for help from anyone regardless of the situation.
+<br><br>
+I was 9 years old when I first encountered God. Our Sunday school teacher said God can be our friend. And I want a friend like God, so I asked Him to be my best friend.
+<br><br>
+October 31, 1999 - I have met an accident. My life drastically changes, and it makes a 180-degree turn. I am caught by surprise and I did not welcome it with an open arm. Because I do not want anyone to feel sorry for me, I wore a mask to hide what is I truly feel inside.
+<br><br>
+After 11 months our mom died. She left us, me and my other three younger siblings, to the care of our Ate (older sister) Joy. At a young age, she took the responsibility of raising us, sending us to school, paying bills, and taking good care of us. My Ate (older sister) is the first person I admire.
+<br><br>
+2003, my Ate Joy approached me and asked me if I wanted to teach children in our Sunday school. But I declined her because I thought I am not fit for the job. I am not patient with kids. I easily get irritated when someone is so loud. But God called me. And after more than a decade, I am still teaching kids. He fully equipped me to do the job.
+<br><br>
+Through the years, God has been graciously showered me with so much blessing. He sent a lot of people to help me along the way. He has shaped me into who I am today and is still shaping me. Now I know that everything that happened in my life is God's way of bringing me closer to Him. And there is no other way that I can fully understand His plan for me if I had not gone through all of that.
+<br><br>
+The reason for my existence is God and God alone.
+
 </p>
 </div>
 
