--- a/about.htm
+++ b/about.htm
@@ -31,7 +31,7 @@
 
 <div class="content">
 	<h2>A Short Biography of Who Am I</h2>
-    		<p>Hi! Everyone! My name is Cheryl. I am a graphic designer and a volunteer Sunday school teacher. The third child of Deolita Moncada and Pablito Repal. I was born on December 15, 1981, in Masbate. My mom is a great sewer, and our dad is the best carpenter in town.
+    	<p><img class="pic" src="pic.png" alt="Cheryl Repal's Profile Picture, a graphic designer and a Sunday school teacher" style="width:250px;height:300px;margin-right:20px;">Hi! Everyone! My name is Cheryl. I am a graphic designer and a volunteer Sunday school teacher. The third child of Deolita Moncada and Pablito Repal. I was born on December 15, 1981, in Masbate. My mom is a great sewer, and our dad is the best carpenter in town.
 <br><br>
 When I was a child, I dreamt of becoming a civil engineer because of the influence our Papa made on me. I remember when he renovated our house, I and my older sister was his laborers. Through that, I have learned and loved carpentry. Also because of that, the belief that 'I can do anything' was formed inside of me. I always thought that if others can do it, I can be able to do it too and do it much better. So, I did not ask for help from anyone regardless of the situation.
 <br><br>
@@ -46,7 +46,6 @@ After 11 months our mom died. She left us, me and my other three younger sibling
 Through the years, God has been graciously showered me with so much blessing. He sent a lot of people to help me along the way. He has shaped me into who I am today and is still shaping me. Now I know that everything that happened in my life is God's way of bringing me closer to Him. And there is no other way that I can fully understand His plan for me if I had not gone through all of that.
 <br><br>
 The reason for my existence is God and God alone.
-
 </p>
 </div>
 
