--- a/index.htm
+++ b/index.htm
@@ -37,13 +37,13 @@ img.prof {
 
 <div class="content">
 <h2>What you are about to see is the life and the work of Cheryl Repal</h2>
-<p> <img class="prof" src="che.jpg" alt="Cheryl Repal's Profile Picture, a graphic designer and a Sunday school teacher" style="width:300px;height:300px;margin-right:20px;">Change is inevitable. It is the only constant thing in this world. And sometimes we resist change because we are afraid of what the result this change will bring to us but, there is nothing we can do to stop it.
+<p> <img class="prof" src="che.jpg" alt="Cheryl Repal's Profile Picture, a graphic designer and a Sunday school teacher" style="width:300px;height:300px;margin-right:20px;">Change is inevitable. It is the one thing that never changes in this universe. And sometimes we oppose change because we are afraid of the consequences of that change, but there is nothing we can do about it.
 <br><br>
-Being born normal and healthy, it is not easy for me to accept change, especially it has made a big difference in the life I am used to. From a limitless person to a limited one, from 'I can do it alone' to 'can you help me with this.' But because of that, I have learned a lot, I have grown a lot.
+It is difficult for me to consider change because I was born normal and safe. Change has made a significant difference in my life. From unlimited to minimal, from 'I can do it alone' to 'can you help me with this?' But I have learned a lot because of it.
 <br><br>
-In here you will see my graphic designs portfolio, the ministries I serve, the people who inspire me and help me along the way, the training I attended, wisdom and knowledge I gained through the years, and a short biography of life. You will also see the editing tools I use in editing photos and graphic design.
+My graphic design portfolio, the church I represent, the people that inspire and help me along the way, the training I have attended, the wisdom and expertise I've gained over the years, and a brief biography of my life can all be found here. You will also see the editing software I use.
 <br><br>
-When my life change, I thought it is the end of it. I thought that nothing good ever happens to me, but I was wrong. The strength of my feet might have gone but I’ve learned that despite being limited I can still do a lot of things.
+When my life changed, I thought was the end. I used to believe that nothing positive ever happened to me, but I was mistaken. My foot strength may have deteriorated, but I have learned that despite my limitations, I can still accomplish things.
 </p>
 </div>
 <div class="footer">
