--- a/power.htm
+++ b/power.htm
@@ -5,6 +5,7 @@
 <title>CHERYL REPAL</title>
 <link rel="stylesheet" href="style.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 </head>
 <body>
 <div class="header">
@@ -16,14 +17,14 @@
 	<li><a href="about.htm">About Me</a></li>
 	<li><a href="contact.htm">Contacts</a></li>
 	<li><a class="active" href="graphics.htm"> Graphics </a>
-		<ul class="dropdown">
+		 <ul class="dropdown">
 			<li><a href="adobe.htm">Photoshop Graphics</a></li>
 			<li><a href="power.htm">Powerpoint Graphics</a></li>
 			<li><a href="canva.htm">Canva Graphics</a></li>
 			<li><a href="crello.htm">Crello Graphics</a></li> 
-		</ul>
+        		</ul>
 	</li>
-	<li><a href="home.htm"> Home </a></li>
+	<li><a href="index.htm"> Home </a></li>
 </ul>
 </div>
 
@@ -100,7 +101,8 @@
 <div class="footer">
 <footer>
 <p class="foot">
-		<<a class="sm" href="https://www.facebook.com/cherylm.repal/">
+
+<a class="sm" href="https://www.facebook.com/cherylm.repal/">
 <i class="fa fa-facebook"><span class="sr-only">Cheryl's Official Facebook Page</span></i>
 </a>
 
@@ -117,6 +119,24 @@
 </a>
 		<br>Cheryl Repal  | Copyright 2021
 	 </p>
+</footer><a class="sm" href="https://www.facebook.com/cherylm.repal/">
+ <i class="fa fa-facebook"><span class="sr-only">Cheryl's Facebook Account</span></i>
+</a>
+
+<a class="sm" href="https://www.instagram.com/cherylmrepal/">
+  <i class="fa fa-instagram"><span class="sr-only"> Cheryl's Instagram Account</span></i>
+</a>
+
+<a class="sm" href="https://www.twitter.com/cherylmrepal/">
+  <i class="fa fa-twitter"><span class="sr-only">Cheryl's Twitter Account</span></i>
+</a>
+
+<a class="sm" href="https://www.linkedin.com/in/cherylrepal/">
+  <i class="fa fa-linkedin"><span class="sr-only"> Cheryl's LinkedIn Account</span></i>
+</a>
+		<br>Cheryl Repal  | Copyright 2021
+	 </p>
 </footer>
+</div>
 </body>
 </html>
