--- a/index.htm
+++ b/index.htm
@@ -12,8 +12,9 @@ img.prof {
 	border-radius: 25px;
 	border: 3px solid black;
 }
-</style>	
+</style>
 </head>
+
 <body>
 <div class="header">
 <h1>Cheryl Repal</h1>
@@ -36,21 +37,23 @@ img.prof {
 </div>
 
 <div class="content">
-	<h2>What you are about to see is the life and the work of Cheryl Repal</h2>
-		<p> <img class="prof" src="che.jpg" alt="Cheryl Repal's Profile Picture, a graphic designer and a Sunday school teacher" style="width:300px;height:300px;margin-right:20px;">Change is inevitable. It is the one thing that never changes in this universe. And sometimes we oppose change because we are afraid of the consequences of that change, but there is nothing we can do about it.
-		<br><br>
-		It is difficult for me to consider change because I was born normal and safe. Change has made a significant difference in my life. From unlimited to minimal, from 'I can do it alone' to 'can you help me with this?' But I have learned a lot because of it.
-		<br><br>
-		When my life changed, I thought was the end. I used to believe that nothing positive ever happened to me, but I was mistaken. My foot strength may have deteriorated, but I have learned that despite my limitations, I can still accomplish things.
-		<br><br>
-		My graphic design portfolio, the church I represent, the people that inspire and help me along the way, the training I have attended, the wisdom and expertise I've gained over the years, and a brief biography of my life can all be found here. You will also see the editing software I use.
-		</p>
+<h2>What you are about to see is the life and the work of Cheryl Repal</h2>
+<p> <img class="prof" src="che.jpg" alt="Cheryl Repal's Profile Picture, a graphic designer and a Sunday school teacher" style="width:300px;height:300px;margin-right:20px;">Change is inevitable. It is the one thing that never changes in this universe. And sometimes we oppose change because we are afraid of the consequences of that change, but there is nothing we can do about it.
+<br><br>
+It is difficult for me to consider change because I was born normal and safe. Change has made a significant difference in my life. From unlimited to minimal, from 'I can do it alone' to 'can you help me with this?' But I have learned a lot because of it.
+<br><br>
+When my life changed, I thought was the end. I used to believe that nothing positive ever happened to me, but I was mistaken. My foot strength may have deteriorated, but I have learned that despite my limitations, I can still accomplish things.
+<br><br>
+My graphic design portfolio, the church I represent, the people that inspire and help me along the way, the training I have attended, the wisdom and expertise I've gained over the years, and a brief biography of my life can all be found here. You will also see the editing software I use.
+</p>
 </div>
+
 <div class="footer">
 <footer>
 <p class="foot">
-		<a class="sm" href="https://www.facebook.com/cherylm.repal/">
-<i class="fa fa-facebook"><span class="sr-only">Cheryl's Official Facebook Page</span></i>
+
+<a class="sm" href="https://www.facebook.com/cherylm.repal/">
+ <i class="fa fa-facebook"><span class="sr-only">Cheryl's Facebook Account</span></i>
 </a>
 
 <a class="sm" href="https://www.instagram.com/cherylmrepal/">
@@ -67,5 +70,6 @@ img.prof {
 		<br>Cheryl Repal  | Copyright 2021
 	 </p>
 </footer>
+</div>
 </body>
 </html>
