--- a/graphics.htm
+++ b/graphics.htm
@@ -75,9 +75,12 @@
 <div class="clearfix"></div>
 </div>
 
+<div class="footer">
 <footer>
-	<a class="sm" href="https://www.facebook.com/cherylm.repal/">
-<i class="fa fa-facebook"><span class="sr-only">Cheryl's Official Facebook Page</span></i>
+<p class="foot">
+
+<a class="sm" href="https://www.facebook.com/cherylm.repal/">
+ <i class="fa fa-facebook"><span class="sr-only">Cheryl's Facebook Account</span></i>
 </a>
 
 <a class="sm" href="https://www.instagram.com/cherylmrepal/">
@@ -94,5 +97,6 @@
 		<br>Cheryl Repal  | Copyright 2021
 	 </p>
 </footer>
+</div>
 </body>
 </html>
