--- a/contact.htm
+++ b/contact.htm
@@ -48,6 +48,11 @@
 
 <div class="footer">
 <footer>
+<p class="foot">
+
+<a class="sm" href="https://www.facebook.com/cherylm.repal/">
+ <i class="fa fa-facebook"><span class="sr-only">Cheryl's Facebook Account</span></i>
+</a>
 
 <a class="sm" href="https://www.instagram.com/cherylmrepal/">
   <i class="fa fa-instagram"><span class="sr-only"> Cheryl's Instagram Account</span></i>
@@ -63,5 +68,6 @@
 		<br>Cheryl Repal  | Copyright 2021
 	 </p>
 </footer>
+</div>
 </body>
 </html>
