--- a/canva.htm
+++ b/canva.htm
@@ -18,14 +18,14 @@
 	<li><a href="about.htm">About Me</a></li>
 	<li><a href="contact.htm">Contacts</a></li>
 	<li><a class="active" href="graphics.htm"> Graphics </a>
-		<ul class="dropdown">
+		 <ul class="dropdown">
 			<li><a href="adobe.htm">Photoshop Graphics</a></li>
 			<li><a href="power.htm">Powerpoint Graphics</a></li>
 			<li><a href="canva.htm">Canva Graphics</a></li>
 			<li><a href="crello.htm">Crello Graphics</a></li> 
-		</ul>
+        		</ul>
 	</li>
-	<li><a href="home.htm"> Home </a></li>
+	<li><a href="index.htm"> Home </a></li>
 </ul>
 </div>
 
@@ -178,8 +178,9 @@
 <div class="footer">
 <footer>
 <p class="foot">
-		<a class="sm" href="https://www.facebook.com/cherylm.repal/">
-<i class="fa fa-facebook"><span class="sr-only">Cheryl's Official Facebook Page</span></i>
+
+<a class="sm" href="https://www.facebook.com/cherylm.repal/">
+ <i class="fa fa-facebook"><span class="sr-only">Cheryl's Facebook Account</span></i>
 </a>
 
 <a class="sm" href="https://www.instagram.com/cherylmrepal/">
@@ -196,5 +197,6 @@
 		<br>Cheryl Repal  | Copyright 2021
 	 </p>
 </footer>
+</div>
 </body>
 </html>
