--- a/adobe.htm
+++ b/adobe.htm
@@ -188,7 +188,7 @@
 <div class="responsive">
   <div class="gallery">
     <a href="ADS (2).jpg">
-      <img src="ADS (2).jpg" alt="Marketing Advertisement with balck and red background">
+      <img src="ADS (2).jpg" alt="Marketing Advertisement with blackk and red background">
     </a>
    <div class="desc">Advertisement Poster</div>
  </div>
@@ -209,8 +209,9 @@
 <div class="footer">
 <footer>
 <p class="foot">
-		<a class="sm" href="https://www.facebook.com/cherylm.repal/">
-<i class="fa fa-facebook"><span class="sr-only">Cheryl's Official Facebook Page</span></i>
+
+<a class="sm" href="https://www.facebook.com/cherylm.repal/">
+ <i class="fa fa-facebook"><span class="sr-only">Cheryl's Facebook Account</span></i>
 </a>
 
 <a class="sm" href="https://www.instagram.com/cherylmrepal/">
@@ -227,5 +228,6 @@
 		<br>Cheryl Repal  | Copyright 2021
 	 </p>
 </footer>
+</div>
 </body>
 </html>
