--- a/about.htm
+++ b/about.htm
@@ -6,6 +6,11 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="style.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<style>
+img.mine {
+	float: right;
+}
+</style>
 </head>
 
 <body>
@@ -17,7 +22,7 @@
 <ul>
 	<li><a class="active" href="about.htm">About Me</a></li>
 	<li><a href="contact.htm">Contacts</a></li>
-	<li><a href="graphics.htm"> Graphics</a>
+	<li><a href="graphics.htm"> Skills </a>
 		<ul class="dropdown">
 			<li><a href="adobe.htm">Photoshop Graphics</a></li>
 			<li><a href="power.htm">Powerpoint Graphics</a></li>
@@ -31,7 +36,7 @@
 
 <div class="content">
 	<h2>A Short Biography of Who Am I</h2>
-    	<p>Hi! Everyone! My name is Cheryl. I am a graphic designer and a volunteer Sunday school teacher. The third child of Deolita Moncada and Pablito Repal. I was born on December 15, 1981, in Masbate. My mom is a great sewer, and our dad is the best carpenter in town.
+    		<p><img class="mine" src="cheryl (1).png" alt="Cheryl Repal's Profile Picture, a graphic designer and a Sunday school teacher" style="width:280px;height:300px;margin-right:20px;">Hi! Everyone! My name is Cheryl. I am a graphic designer and a volunteer Sunday school teacher. The third child of Deolita Moncada and Pablito Repal. I was born on December 15, 1981, in Masbate. My mom is a great sewer, and our dad is the best carpenter in town.
 <br><br>
 When I was a child, I dreamt of becoming a civil engineer because of the influence our Papa made on me. I remember when he renovated our house, I and my older sister was his laborers. Through that, I have learned and loved carpentry. Also because of that, the belief that 'I can do anything' was formed inside of me. I always thought that if others can do it, I can be able to do it too and do it much better. So, I did not ask for help from anyone regardless of the situation.
 <br><br>
@@ -52,8 +57,8 @@ The reason for my existence is God and God alone.
 <div class="footer">
 <footer>
 <p class="foot">
-		<a class="sm" href="https://www.facebook.com/cherylm.repal/">
-<i class="fa fa-facebook"><span class="sr-only">Cheryl's Official Facebook Page</span></i>
+<a class="sm" href="https://www.facebook.com/cherylm.repal/">
+ <i class="fa fa-facebook"><span class="sr-only">Cheryl's Facebook Account</span></i>
 </a>
 
 <a class="sm" href="https://www.instagram.com/cherylmrepal/">
@@ -70,5 +75,6 @@ The reason for my existence is God and God alone.
 		<br>Cheryl Repal  | Copyright 2021
 	 </p>
 </footer>
+</div>
 </body>
 </html>
