--- a/graphics.htm
+++ b/graphics.htm
@@ -54,7 +54,7 @@
 <div class="responsive">
   <div class="gallery">
     <a href="canva.htm">
-      <img src="http://assets.stickpng.com/images/5842a622a6515b1e0ad75af9.png" alt="going to Canva Graphics Subpage">
+      <img src="https://img.apksum.com/c0/com.canva.editor/2.61.0/icon.png" alt="going to Canva Graphics Subpage">
     </a>
   <div class="desc">Canva</div>
 </div>
