--- a/adobe.htm
+++ b/adobe.htm
@@ -178,8 +178,8 @@
 
 <div class="responsive">
   <div class="gallery">
-    <a href="ADS (1).jpg">
-      <img src="ADS (1).jpg" alt="Precious Stone Water Refilling Station Advertisement">
+    <a href="ADS small(1).jpg">
+      <img src="ADS small(1).jpg" alt="Precious Stone Water Refilling Station Advertisement">
     </a>
    <div class="desc">Advertisement Poster</div>
  </div>
@@ -187,10 +187,19 @@
 
 <div class="responsive">
   <div class="gallery">
-    <a href="ADS (2).jpg">
-      <img src="ADS (2).jpg" alt="Marketing Advertisement with blackk and red background">
+    <a href="ADS small(2).jpg">
+      <img src="ADS small(2).jpg" alt="Marketing Advertisement with black and red background">
     </a>
    <div class="desc">Advertisement Poster</div>
+ </div>
+</div>
+
+<div class="responsive">
+  <div class="gallery">
+    <a href="ADS small(3).jpg">
+      <img src="ADS small(3).jpg" alt="Packaging Design - Apple and Milk Flavor">
+    </a>
+   <div class="desc">Packaging Design</div>
  </div>
 </div>
 
