--- a/crello.htm
+++ b/crello.htm
@@ -34,8 +34,8 @@
 
 <div class="responsive">
   <div class="gallery">
-    <a href="crello (1).jpeg">
-      <img src="crello (1).jpeg" alt="An image with a purple background and an angel having broken wings, with quotation about spreading wings">
+    <a href="crello.jpeg">
+      <img src="crello.jpeg" alt="An image with a purple background and an angel having broken wings, with quotation about spreading wings">
      </a>
   <div class="desc">Spread My Wings</div>
 </div>
@@ -43,8 +43,8 @@
 
 <div class="responsive">
   <div class="gallery">
-    <a href="crello (2).jpeg">
-      <img src="crello (2).jpeg" alt="social media cover photo">
+    <a href="crello (5).jpeg">
+      <img src="crello (5).jpeg" alt="social media cover photo">
     </a>
   <div class="desc">I am Cheryl</div>
 </div>
@@ -52,8 +52,8 @@
 
 <div class="responsive">
   <div class="gallery">
-    <a href="crello (1).png">
-      <img src="crello (1).png" alt="clear blue sky with a cherry blossom tree and a quotation about trusting God">
+    <a href="crello (6).jpg">
+      <img src="crello (6).jpg" alt="clear blue sky with a cherry blossom tree and a quotation about trusting God">
     </a>
   <div class="desc">Trust the process</div>
 </div>
@@ -61,8 +61,8 @@
 
 <div class="responsive">
   <div class="gallery">
-    <a href="crello (2).png">
-      <img src="crello (2).png" alt="an image of a girl seating on the edge of the bridge, her feet touches the sea with a quotation about loneliness">
+    <a href="crello (4).jpg">
+      <img src="crello (4).jpg" alt="an image of a girl seating on the edge of the bridge, her feet touches the sea with a quotation about loneliness">
     </a>
   <div class="desc">I'm scared</div>
 </div>
@@ -79,8 +79,8 @@
 
 <div class="responsive">
   <div class="gallery">
-    <a href="crello (4).jpg">
-      <img src="crello (4).jpg" alt="an image of an athlete running in a field with a quotation about running">
+    <a href="crello (2).jpg">
+      <img src="crello (2).jpg" alt="an image of an athlete running in a field with a quotation about running">
     </a>
   <div class="desc">Run with Patience</div>
 </div>
@@ -88,8 +88,8 @@
 
 <div class="responsive">
   <div class="gallery">
-    <a href="crello (5).jpg">
-      <img src="crello (5).jpg" alt="an image of a girl sipping coffee in the morning">
+    <a href="crello (1).jpg">
+      <img src="crello (1).jpg" alt="an image of a girl sipping coffee in the morning">
     </a>
   <div class="desc">Morning Coffee</div>
 </div>
@@ -97,8 +97,8 @@
 
 <div class="responsive">
   <div class="gallery">
-    <a href="crello (6).jpg">
-      <img src="crello (6).jpg" alt="an image of smiling mother and child with flowes on the side as decoration and an abstract pink background">
+    <a href="crello (7).jpg">
+      <img src="crello (7).jpg" alt="an image of smiling mother and child with flowes on the side as decoration and an abstract pink background">
     </a>
   <div class="desc">Mother and child</div>
 </div>
