--- a/crello.htm
+++ b/crello.htm
@@ -34,8 +34,8 @@
 
 <div class="responsive">
   <div class="gallery">
-    <a href="crello.jpeg">
-      <img src="crello.jpeg" alt="An image with a purple background and an angel having broken wings, with quotation about spreading wings">
+    <a href="crello.jpg">
+      <img src="crello.jpg" alt="An image with a purple background and an angel having broken wings, with quotation about spreading wings">
      </a>
   <div class="desc">Spread My Wings</div>
 </div>
@@ -43,8 +43,8 @@
 
 <div class="responsive">
   <div class="gallery">
-    <a href="crello (5).jpeg">
-      <img src="crello (5).jpeg" alt="social media cover photo">
+    <a href="crello (5).jpg">
+      <img src="crello (5).jpg" alt="social media cover photo">
     </a>
   <div class="desc">I am Cheryl</div>
 </div>
