--- a/contact.htm
+++ b/contact.htm
@@ -41,7 +41,7 @@
 	Write your message/s:<br>
 	<textarea name="message" rows="10" cols="100%"></textarea><br><br>
 	
-	<input type="submit" value="Submit">
+	<a href=mailto:moncada.repal@gmail.com? subject="subject text"><input type="submit" value="Submit"></a>
 	<input type="reset">
 </fieldset>
 </div>
