--- a/contact.htm
+++ b/contact.htm
@@ -31,18 +31,14 @@
 
 <div class="content">
 <fieldset>
-	<legend style="color:black">Personal Data</legend>
-	Complete Name:<br>
-	<input type="text" name="fname" placeholder="Enter your Full Name" size="100px"><br>
-<form>
-	E-mail:<br>
-	<input type="email" name="email" size="100px">
-</form><br>
-	Write your message/s:<br>
-	<textarea name="message" rows="10" cols="100%"></textarea><br><br>
-	
-	<a href=mailto:moncada.repal@gmail.com? subject="subject text"><input type="submit" value="Submit"></a>
-	<input type="reset">
+	<form action=”mailto:moncada.repal@gmail.com”
+method=”POST”
+enctype=”multipart/form-data”
+name=”EmailForm”>
+Name:<br>
+<input type=”text” size=”19″ name=”ContactName”><br><br>
+Message:<br> <textarea name=”ContactCommentt” rows=”6″ cols=”20″>
+</textarea><br><br> <input type=”submit” value=”Submit”> </form>
 </fieldset>
 </div>
 
