--- a/contact.htm
+++ b/contact.htm
@@ -31,17 +31,16 @@
 
 <div class="content">
 <fieldset>
-	<legend style="color:black">Personal Data</legend>
-	Complete Name:<br>
-	<input type="text" name="fname" placeholder="Enter your Full Name" size="100px"><br>
-<form>
-	E-mail:<br>
-	<input type="email" name="email" size="100px">
-</form><br>
-	Write your message/s:<br>
-	<textarea name="message" rows="10" cols="100%"></textarea><br><br>
-	
-	<input type="submit" value="Submit"><input type="reset">
+	<form action="mailto:moncada.repal@gmail.com" method="post" enctype="text/plain">
+Name:<br>
+<input type="text" name="name"><br>
+E-mail:<br>
+<input type="text" name="mail"><br>
+Comment:<br>
+<input type="text" name="comment" size="50"><br><br>
+<input type="submit" value="Send">
+<input type="reset" value="Reset">
+</form>
 </fieldset>
 </div>
 
